# pico2w_thing_91c27

./: .gitignore  Cargo.toml  LICENSE  README.md  pico2w_imu.kicad_prl
.cargo/: config.toml
.zed/: settings.json
analysis_imu/: Cargo.toml
analysis_imu/src/: lib.rs  main.rs  rerun_util.rs
board/: .gitignore  ProjectSymbol.kicad_sym  README.md  fp-info-cache  fp-lib-table  pico2w_imu.kicad_pcb  pico2w_imu.kicad_prl  pico2w_imu.kicad_pro  pico2w_imu.kicad_sch  sym-lib-table
board/ProjectFootprint.pretty/: JST_PH_S2B-PH-K_1x02_P2.00mm_Horizontal_no_silk.kicad_mod  LGA-14_3x2.5mm_P0.5mm_tospec.kicad_mod  PinHeader_1x01_P2.54mm_Vertical_small.kicad_mod  PinHeader_1x02_P2.54mm_Vertical_round_no_silk_courtyard.kicad_mod  RaspberryPi_Pico_2_tht.kicad_mod  RaspberryPi_Pico_2w_tht.kicad_mod  RaspberryPi_Pico_Common_THT.kicad_mod  RaspberryPi_Pico_Common_THT_mod.kicad_mod  SOT-23_diodes_inc_standard.kicad_mod
firmware/: Cargo.toml  Makefile  README.md  build.rs  partitions.json
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: bme280.rs  defmt_serial.rs  flash_memory.rs  hap.rs  hw_test.rs  i2s_input.rs  icm42688.rs  lib.rs  lsm6dsv320x.rs  main.rs  mx25.rs  rp2350_util.rs  static_files.rs  usb_picotool_reset.rs
firmware_imu/: Cargo.toml  Makefile  partitions.json
firmware_imu/src/: icm42688.rs  imu.rs  lib.rs  lsm6dsv320x.rs  main.rs
micro_hap/: Cargo.toml
micro_hap/examples/: main.rs  main_ble.rs  main_tap.rs
micro_hap/src/: adv.rs  characteristic.rs  fmt.rs  lib.rs  pair_verify.rs  pairing.rs  service.rs  srp.rs  tlv.rs  util.rs  uuid.rs
micro_hap/src/ble/: broadcast.rs  mod.rs  pdu.rs  sig.rs  util.rs
micro_hap/src/crypto/: aead.rs  ed25519.rs  mod.rs  srp.rs  x25519.rs
micro_hap/src/http/: mod.rs
rp2350_support/: Cargo.toml  Makefile
rp2350_support/src/: defmt_serial.rs  lib.rs  rp2350_util.rs  static_files.rs  usb_picotool_reset.rs
trouble_hap/: Cargo.toml
trouble_hap/examples/: main.rs
trouble_hap/src/: adv.rs  characteristic.rs  descriptor.rs  lib.rs  service.rs  util.rs  uuid.rs
