[workspace]
resolver = "2"

members = ["firmware" ]


[workspace.dependencies]

#micro_hap = { version = "0.1.0", path = "../micro_hap/micro_hap/", features=["defmt"]}
micro_hap = { version = "0.1.0", git = "https://github.com/iwanders/micro_hap.git", rev="073d463122d2ab8a338d2de67210f6bcea5ad398", features=["defmt"]}
#https://github.com/iwanders/micro_hap
