[workspace]
resolver = "2"

members = ["firmware" ]


[workspace.dependencies]

#micro_hap = { version = "0.1.0", path = "../micro_hap/micro_hap/", features=["defmt"]}
micro_hap = { version = "0.1.0", git = "https://github.com/iwanders/micro_hap.git", rev="22775feac45644e11d9c8b86a6241ddb33513610", features=["defmt"]}
#https://github.com/iwanders/micro_hap
