[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
autobins = true

[dependencies]

# Core embassy functionality.
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "icmp",
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "proto-ipv4",
  "proto-ipv6",
  "multicast",
] }


# For the sd card.
embedded-sdmmc = "0.7.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }

# wifi/bluetooth chip.
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }

# Misc stuff to make board work.
critical-section = "1.2.0"
pio = { version = "0.3" }


# logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Fixed points, for the i2s
fixed = "1.28.0"

# Memory handling.
static_cell = "2.1"
heapless = { version = "0.7.0", features = ["serde"] }

# for the bme driver (and possibly others).
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }

# For asset serialization.
#bincode = { version = "2.0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.17", default-features = false }
postcard = "1.0.0"

[target.'cfg(target_arch = "arm")'.dependencies]
# All actual hardware dependencies that don't compile on x86 go here.
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "task-arena-size-40960",
] }
embassy-rp = { version = "0.4.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }


[dev-dependencies]
# I need an async executor to run the tests.
smol = "2.0.2"

[features]
# We use this feature here, that's set to opt into the host binaries.
std = []

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[[bin]]
name = "pack_assets"
required-features = ["std"]
