[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
autobins = true

[dependencies]

# Core embassy functionality.
embassy-embedded-hal = { version = "0.5", features = ["defmt", "time"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
# embassy-net = { version = "0.7.0", features = [
#   "defmt",
#   "icmp",
#   "tcp",
#   "udp",
#   "raw",
#   "dhcpv4",
#   "medium-ethernet",
#   "dns",
#   "proto-ipv4",
#   "proto-ipv6",
#   "multicast",
# ] }


# For the sd card.
embedded-sdmmc = "0.7.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }

# wifi/bluetooth chip.
cyw43 = { version = "0.6.0", features = [
    "defmt",
    "firmware-logs",
    "bluetooth",
] }

# Misc stuff to make board work.
critical-section = "1.2.0"
pio = { version = "0.3" }


# logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Fixed points, for the i2s
fixed = "1.28.0"

# Memory handling.
static_cell = "2.1"
heapless = { version = "0.9.0", features = ["serde"] }

# for the bme driver (and possibly others).
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }

# For asset serialization.
#bincode = { version = "2.0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.17", default-features = false }
postcard = "1.0.0"

# To easily convert slice of one type into another.
zerocopy = { version = "0.8.26", features = ["derive"] }

# Some stuff to fuzz deterministically
rand_chacha ={version= "0.10.0", default-features=false}
#chacha20 = {version="0.10", features=["rng"]}
rand = {version="0.10.0", default-features=false}

thiserror = {version="2", default-features=false}
bitfield-struct = "0.11.0"
micro_hap = { workspace = true } #, features = ["defmt"]
[target.'cfg(target_arch = "arm")'.dependencies]
#trouble-host = { version = "0.2.4", features = ["defmt"] }
trouble-host = { features = [
"peripheral",
"default-packet-pool-mtu-1024",
], git = "https://github.com/embassy-rs/trouble", rev = "51cf300cb4951370ce043ffe5f67594a420cfd3e" }
#], path = "../../trouble/host" }
# All actual hardware dependencies that don't compile on x86 go here.
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    #"task-arena-size-40960",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    # Is this actually better / necessary, claim is it avoids halting both cores for an XIP transfer,
    # but how do we know how much ram we have left?
    # https://github.com/embassy-rs/embassy/issues/4367#issuecomment-3032809069 may have some clues.
   # "boot2-ram-memcpy",
   # "run-from-ram",
] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
embassy-futures = "0.1.2"


[dev-dependencies]
# I need an async executor to run the tests.
smol = "2.0.2"


embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "std",
] }
[features]
# We use this feature here, that's set to opt into the host binaries.
std = []


[[bin]]
name = "pack_assets"
required-features = ["std"]
