[package]
name = "firmware_imu"
version = "0.1.0"
edition = "2021"
autobins = true

[dependencies]

rp2350_support={workspace=true}

# Core embassy functionality.
embassy-embedded-hal = {workspace=true}
embassy-sync = {workspace=true}
embassy-time = {workspace=true}
embassy-usb = {workspace=true, features=["max-handler-count-8", "max-interface-count-8"]}
# For the sd card.
embedded-sdmmc = {workspace=true}
embedded-hal-bus =  {workspace=true}

# wifi/bluetooth chip.
cyw43 = {workspace=true}

# Misc stuff to make board work.
critical-section = {workspace=true}
pio = {workspace=true}


# logging
defmt = {workspace=true}
defmt-rtt = {workspace=true}

# Fixed points, for the i2s
fixed = {workspace=true}

# Memory handling.
static_cell ={workspace=true}
heapless = {workspace=true}

# for the bme driver (and possibly others).
embedded-hal-async = {workspace=true}
#embedded-hal  = { version = "1.0.0", features = ["defmt-03"] }

# For asset serialization.
#bincode = { version = "2.0.1", default-features = false }
serde = {workspace=true}
serde_bytes = {workspace=true}
postcard ={workspace=true}

# To easily convert slice of one type into another.
zerocopy = {workspace=true}

# Some stuff to fuzz deterministically
rand_chacha ={workspace=true}
#chacha20 = {version="0.10", features=["rng"]}
rand = {workspace=true}

thiserror ={workspace=true}
bitfield-struct = {workspace=true}
micro_hap = { workspace = true } #, features = ["defmt"]


[target.'cfg(target_arch = "arm")'.dependencies]
#trouble-host = { version = "0.2.4", features = ["defmt"] }
trouble-host = { workspace=true }
#], path = "../../trouble/host" }
# All actual hardware dependencies that don't compile on x86 go here.
cortex-m = { workspace=true }
cortex-m-rt = { workspace=true }
embassy-executor = { workspace=true }
embassy-rp = { workspace=true }
cyw43-pio = { workspace=true }
embassy-futures = { workspace=true }


[dev-dependencies]
# I need an async executor to run the tests.
smol ={ workspace=true }


embassy-time = { workspace=true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "std",
]  }
[features]
# We use this feature here, that's set to opt into the host binaries.
std = []
