[package]
name = "micro_hap"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"


# The linux examples were added in https://github.com/embassy-rs/trouble/pull/420
# The 0.2.4 release is just before that.
# Switching to devel, be sure to modify both trouble-host as well as the linux examples in dev-dependencies.

[dependencies]
trouble-host = { features = [
    "peripheral",
    "default-packet-pool-mtu-1024",
    #], git = "https://github.com/embassy-rs/trouble", rev = "a2cdd1444370185b2a5b118b446a8947b200b602" }
], path = "../../trouble/host" }
# ble deps
# trouble-host = { path="../../, features = [
#     "peripheral",
# ], rev = "1e6f2d743857ab6888a8a59199ad0c186bbf38c7" }
# /ble deps
#
embassy-sync = { version = "0.7.0" }
embassy-futures = "0.1.1"
embassy-time = "0.4"

# http deps
#embassy-net = { version = "0.7", features = ["proto-ipv4", "tcp", "medium-ip"] }
#httparse = "1.10.1"
embedded-io-async = "0.6.1"
# /http deps

# For SRP
sha2 = { version = "0.10.9", default-features = false }
crypto-bigint = { version = "0.6.1", default-features = false }

# For more crypto stuff
hkdf = { version = "0.12.4", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
    "static_secrets",
] }

#
zerocopy = { version = "0.8.26", features = ["derive"] }
bitfield-struct = "0.11.0"
heapless = { version = "0.9", features = ["serde", "portable-atomic"] }
static_cell = "2.1"

uuid = { version = "1.18.0", features = ["zerocopy"], default-features = false }

# Initialisation of cryptographic helpers
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# logging
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }


[dev-dependencies]
trouble-linux-examples = { git = "https://github.com/embassy-rs/trouble", rev = "1e6f2d743857ab6888a8a59199ad0c186bbf38c7" }
trouble-example-apps = { git = "https://github.com/embassy-rs/trouble", rev = "1e6f2d743857ab6888a8a59199ad0c186bbf38c7" }
tokio = { version = "1", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "signal",
    "sync",
    "time",
] }
bt-hci = { version = "0.3.2", default-features = false }
env_logger = "0.11"
log = { version = "0.4" }
rand = "0.9.2"
embassy-net-tuntap = "0.1.0"
embassy-executor = { version = "0.8.0", features = [
    "arch-std",
    "executor-thread",
    "log",
] }
rand_core = { version = "0.9.1", features = ["std", "os_rng"] }
embedded-io-adapters = { version = "0.6.2", features = ["tokio-1"] }

# For testing our non_std srp implementation.
srp = "0.6.0"
num-bigint = "0.4"


[features]

log = ["dep:log"]
std = ["bt-hci/log", "trouble-host/log", "log", "embedded-io-async/std"]
