[package]
name = "micro_hap"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"


[dependencies]
trouble-host = { features = [
    "peripheral",
    "default-packet-pool-mtu-1024",
], git = "https://github.com/embassy-rs/trouble", rev = "b57bb1c32fa16d1f81a2b0123ec723c9da7defb4" }
#], path = "../../trouble/host" }
# ble deps
# trouble-host = { path="../../, features = [
#     "peripheral",
# ], rev = "1e6f2d743857ab6888a8a59199ad0c186bbf38c7" }
# /ble deps
#
embassy-sync = { version = "0.7.0" }


# For SRP
sha2 = { version = "0.10.9", default-features = false }
crypto-bigint = { version = "0.6.1", default-features = false }

# For more crypto stuff
hkdf = { version = "0.12.4", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
    "static_secrets",
] }

#
zerocopy = { version = "0.8.26", features = ["derive"] }
bitfield-struct = "0.11.0"
heapless = { version = "0.9", features = ["serde", "portable-atomic"] }
static_cell = "2.1"

uuid = { version = "1.18.0", features = ["zerocopy"], default-features = false }

# Initialisation of cryptographic helpers
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# logging
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }


[dev-dependencies]

# http deps
#embassy-net = { version = "0.7", features = ["proto-ipv4", "tcp", "medium-ip"] }
#httparse = "1.10.1"
#embedded-io-async = "0.6.1"
# embassy-net-tuntap = "0.1.0"
# /http deps

embassy-futures = "0.1.1"
embassy-time = "0.4"
trouble-linux-examples = { git = "https://github.com/embassy-rs/trouble", rev = "b57bb1c32fa16d1f81a2b0123ec723c9da7defb4" }
trouble-example-apps = { git = "https://github.com/embassy-rs/trouble", rev = "b57bb1c32fa16d1f81a2b0123ec723c9da7defb4" }
tokio = { version = "1", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "signal",
    "sync",
    "time",
] }
bt-hci = { version = "0.4.0", default-features = false }
env_logger = "0.11"
log = { version = "0.4" }
rand = "0.9.2"
embassy-executor = { version = "0.8.0", features = [
    "arch-std",
    "executor-thread",
    "log",
] }
rand_core = { version = "0.9.1", features = ["std", "os_rng"] }
embedded-io-adapters = { version = "0.6.2", features = ["tokio-1"] }

# For testing our non_std srp implementation.
srp = "0.6.0"
num-bigint = "0.4"


[features]

log = ["dep:log"]
std = ["bt-hci/log", "trouble-host/log", "log"]
